# node

./: .clang-format  .clang-tidy  .clangd  .distignore  .dockerignore  .editorconfig  .envrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Concept.md  Configuration.md  Dockerfile  Dockerfile.dev  Dockerfile.dev-centos  Dockerfile.dev-ubuntu  Doxyfile  LICENSE  Makefile  Makefile.complete  Makefile.config  Makefile.help  README.md  README.txt  REUSE.toml  Readme  Readme.md  config-fpga.h  config.h  file-digest.conf  file-to-reorder.conf  (+15 more)
clients/: CMakeLists.txt  Makefile.inc  README.md  README.txt  python
clients/hypersim/: README.docx  README.md  send_receive.ecf
clients/labview/: Data_to_string.vi  I16_to_string.vi  I32_to_string.vi  MSG_create.vi  MSG_interpret.vi  SGL_to_string.vi  Simple UDP(main).vi  Simple.UDP_v1.vi  UNIX_Time_Simple.vi  UNIX_Time_string.vi
clients/matlab/: README.md  receiver.m  villas.conf
clients/opal/: .project  01_server2OPAL.llp  CMakeLists.txt  Makefile.inc  README.md  s2ss_tests.llp  udp_readme.txt  villas_udp.llp
clients/python/: .gitignore  CMakeLists.txt  Makefile.inc  client.py  villas.py  villas_pb2.py
clients/python-binding/: CMakeLists.txt  villas-python-binding.cpp
clients/python-wrapper/: CMakeLists.txt  villas-python-wrapper.cpp
clients/shmem/: CMakeLists.txt  villas-shmem.cpp
clients/typhoon/: villas_typhoon_ethernet_variable_exchange.tse
common/: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODEOWNERS  Dockerfile  README.md
common/.reuse/: dep5
common/cmake/: GetVersion.cmake
common/lib/: CMakeLists.txt  advio.c  advio.cpp  base64.cpp  bitset.c  bitset.cpp  buffer.c  buffer.cpp  common.c  common.cpp  compat.c  compat.cpp  copyright.cpp  cpuset.cpp  crypt.c  crypt.cpp  hash_table.c  hash_table.cpp  hist.c  hist.cpp  json.cpp  json_buffer.cpp  list.c  list.cpp  log.c  log.cpp  log_config.c  log_helper.c  log_legacy.cpp  memory.cpp  memory_manager.cpp  plugin.cpp  popen.cpp  table.c  table.cpp  task.c  task.cpp  terminal.cpp  timing.c  timing.cpp  (+9 more)
common/tests/: CMakeLists.txt  advio.c  advio.cpp  bitset.c  bitset.cpp  graph.cpp  hash_table.c  hash_table.cpp  hist.c  hist.cpp  json_buffer.cpp  kernel.c  kernel.cpp  list.c  list.cpp  log.c  log.cpp  logging.cpp  main.cpp  task.c  task.cpp  timing.c  timing.cpp  tsc.c  tsc.cpp  utils.c  utils.cpp
doc/: .gitignore  .redocly.yaml  AdvancedIO.md  CMakeLists.txt  Clients.md  Concept.md  Configuration.md  Contributors.md  DesignGoals.md  Development.md  Doxyfile  Doxyfile.in  GettingStarted.md  Hooks.md  Install.md  LiveSystem.md  Mainpage.md  Makefile  Makefile.inc  Netem.md  Nodes.md  RemoteAPI.md  Tools.md  Tuning.md  Usage.md  config.schema.json  header.html  index.html  openapi-relay.yaml  openapi.yaml  package-lock.json  package.json  redocly.yaml
doc/clients/: GTFPGA.md  NGSI.md
doc/concept/: Hooks.md  Node.md  Path.md  SuperNode.md
doc/development/: AdvancedIO.md  Development.md  RemoteAPI.md
doc/nodes/: FPGA.md  (+10 more)
etc/: CMakeLists.txt  Makefile.inc  Shmem_mqtt.conf  WSCC_9bus_MV.conf  advio.conf  amqp.conf  comedi.conf  demo.json  eric-lab.conf  example.conf  fpga-simple.conf  fpga.conf  global.conf  gtnet_test4.conf  iec104.conf  infiniband.conf  influxdb.conf  loopback.conf  loopback.json  loopback2.conf  mms_mms.conf  mms_test.conf  mms_test2.conf  mms_udp.conf  mqtt.conf  multiple_dest.conf  pipe-loopback-nanomsg.conf  pipe-loopback-websocket.json  plugins.conf  rtp.conf  s2ss.conf  sampled_values.conf  sampled_values.json  server.conf  shmem.conf  shmem_mqtt.conf  syslab-zmq.conf  test.conf  uldaq.conf  unix_domain.conf  (+8 more)
fpga/: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  libvillas-fpga.pc.in  past-commits.txt
lib/: CMakeLists.txt  Makefile.inc  Makefile.villas-ext.inc  Makefile.villas.inc  advio.c  api.c  api.cpp  bitset.c  buffer.c  capabilities.cpp  cfg.c  checks.c  compat.c  config.cpp  config_helper.c  config_helper.cpp  copyright.c  crypt.c  curlio.c  dumper.cpp  empty.cpp  file.c  format.cpp  format_type.c  format_type.cpp  gtfpga.c  hash_table.c  hist.c  hook.c  hook.cpp  hook_list.c  hook_list.cpp  hook_type.c  hooks-other.c  hooks-stats.c  hooks.c  if.c  io.c  io.cpp  io_format.c  (+76 more)
packaging/: CMakeLists.txt  Makefile.inc  deps.sh  libvillas.pc.in  reverse-struct-group.patch
plugins/: CMakeLists.txt  Makefile.inc  example_hook.cpp
python/: .envrc  CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: CMakeLists.txt  Makefile.inc  cfg.c  convert.c  fpga-bench-overruns.c  fpga-bench.c  fpga-main.c  fpga-tests.c  fpga.c  hist.c  hook.c  hooks.c  if.c  main.c  msg.c  node.c  opal-async-param.cpp  path.c  pipe.c  random.c  receive.c  relay.cpp  rt.c  send.c  server.c  shmem.c  signal.c  tc.c  test-cmp.c  test-rtt.c  test-shmem.c  test.c  utils.c  villas-compare.cpp  villas-conf2json.cpp  villas-config-check.cpp  villas-convert.cpp  villas-graph.cpp  villas-hook.c  villas-hook.cpp  (+12 more)
tests/: CMakeLists.txt  Makefile.gcov.inc  Makefile.inc  advio.c  curlio.c  fpga.c  hist.c  integration-tests.sh  integration.sh  list.c  log.c  main.c  memory.c  node-infiniband-benchmark.sh  pool.c  queue.c  timing.c  utils.c  valgrind.supp
tools/: CMakeLists.txt  Makefile.inc  conf2json.c  conf2json.cpp  cppcheck-supressions.txt  cumdist.py  docker-dev.sh  docker.sh  extract_rtt.py  fix_git_history.sh  format-all.sh  fpga-cat.sh  fpga-non-root.sh  fpga-platform-bind.sh  fpga-xbar-select.sh  gdb-sudo.sh  git-pre-commit-hook.sh  hwdef-parse.py  integration-tests-helper.sh  integration-tests.sh  pci-rebind-device.sh  pci-reset-device.sh  pre-commit-dco-hook.sh  rebind_device.sh  remove_lgpl.sh  report_metric.sh  reset_pci_device.sh  rmsem.c  rmsem.cpp  rmshm.cpp  run-cppcheck.sh  s2ss.sh  start-fpga.sh  start_fpga.sh  tc-dump.sh  tc-netem.sh  tc-netem2.sh  tests.sh  tune-realtime.sh  villas  (+7 more)
(+2336 files in other folders)
